Feature: Improved RTP min and max coords + per world settings + claim plugin hooks (#76)
* Feature: Improved RTP min and max coords + per world settings

* refactor: Implement a cache for the world values

* fix: Clear the coordCache on reload

* chore: Add note in config file about reuse of coords

* feat: Implement Claim plugin support and some other improvements

* fix: Forgot to add the config values to the config thingy + better name for the claim protection

* chore: Add config value and comment for claim protection

* refactor: Remove isTrusted method

* refactor: Use a double array from the begining

* fix: Actually add the config defaults

* fix: Fix lands not being Lands!

* fix: Fix bounds issue order is max, min not min, max in the config

* refactor: Check one last time if the chunks claimed state has changed.

* fix: Fix essentials being uniquely silly